--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>form review</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="page">
+        <form action="#">
+            <h1>login form</h1>
+            <label for="username">username</label>
+            <input type="text" name="username">
+            <label for="password">password</label>
+            <input type="password" name="password" required>
+            <button type="submit">enter</button>
+        </form>
+    </div>
+    <div class="form-input">
+
+    </div>
 </body>
 </html>
